# edgetpu-detection-camera

./: .gitignore  CMakeLists.txt  README.md
include/: detection_camera.h  tflite_wrapper.h
scripts/: camera_detector.py  cv-error
src/: detection_camera.cc  label_utils.cc  main.cpp  tflite_wrapper.cc
